--- a/HRM.ERP/Views/Home/Index.cshtml
+++ b/HRM.ERP/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="preloader">
   <div class="loader">
     <div class="loader__figure"></div>
-    <p class="loader__label">Elite admin</p>
+    <p class="loader__label">ERP4SME Admin</p>
   </div>
 </div>
 <!-- ============================================================== -->
@@ -56,13 +56,7 @@
       <!-- Row -->
       <div class="row">
         <!-- Column -->
-        <div class="preloader">
-          <div class="loader">
-            <div class="loader__figure"></div>
-            <p class="loader__label">Elite admin</p>
-          </div>
-        </div>
-
+ 
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
@@ -74,9 +68,7 @@
                     <div style="text-align:center;">
                       <h1 class="d-inline">Welcome to ERP4SME <a href="#code1" data-toggle="collapse">@*<i class="fa fa-code" data-toggle="tooltip" title="Get code"></i>*@</a></h1>
                       <p class="text-muted m-t-0">Before you proceed, kindly update your organisation details.</p>
-
                       <a href="/Organisation/MyOrganisation" class="btn btn-lg btn-success">Click to Update</a>
-
                     </div>
 
 
