--- a/HRM.ERP/Views/Customers/CustomerStatement.cshtml
+++ b/HRM.ERP/Views/Customers/CustomerStatement.cshtml
@@ -195,8 +195,11 @@
                               <table class="table table-hover">
                                 <thead>
                                   <tr>
+                                    <th class="text-left">S/N</th>
                                     <th class="text-center">Date</th>
                                     <th>Details</th>
+                                    <th>Credit</th>
+                                    <th>Debit</th>
                                     <th class="text-right">Amount</th>
                                     @*<th class="text-right">Balance </th>*@
                                   </tr>
@@ -205,8 +208,11 @@
                                   @foreach (var item in Model.CustomerStates)
                                   {
                                     <tr>
+                                       <th></th>
                                       <td class="text-center">@item.StateDate.ToString("MM-dd-yyyy")</td>
                                       <td>@item.Details</td>
+                                      <th></th>
+                                      <th></th>
                                       <td class="text-right">@item.Amount </td>
                                       @*<td class="text-right"> $48 </td>*@
                                     </tr>
