--- a/HRM.ERP/Views/Shared/_LayoutAccountAside.cshtml
+++ b/HRM.ERP/Views/Shared/_LayoutAccountAside.cshtml
@@ -55,15 +55,36 @@
 
         </li>*@
             <li>
+                <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-bag"></i><span class="hide-menu">Stock</span></a>
+
+                <ul aria-expanded="false" class="collapse">
+                    <li><a asp-action="Index" asp-controller="ProductServices">Products & Services</a></li>
+                    <li><a asp-action="Index" asp-controller="NewStock">New Stock</a></li>
+                    <li><a asp-action="AvailableStock" asp-controller="NewStock">Available Stock</a></li>
+                    <li><a asp-action="History" asp-controller="NewStocks">History</a></li>
+                </ul>
+            </li>
+            <li>
                 <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-palette"></i><span class="hide-menu">Sales</span></a>
 
                 <ul aria-expanded="false" class="collapse">
                     <li><a asp-action="Index" asp-controller="Estimates">Quotes</a></li>
                     <li><a asp-action="Index" asp-controller="Invoices">Invoices</a></li>
-                    @*<li><a asp-action="Structure" asp-controller="Organization">Customer Statements</a></li>*@
-                    <li><a asp-action="CustomerStatement" asp-controller="Customers">Customer Statements</a></li>
+                    @*<li><a asp-action="Structure" asp-controller="Organization">Customer Statements</a></li>
+                    <li><a asp-action="CustomerStatement" asp-controller="Customers">Customer Statements</a></li>*@
+                                     
+                </ul>
+            </li>
+            <li>
+                <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu">Customers</span></a>
+
+                <ul aria-expanded="false" class="collapse">
+                    @*<li><a asp-action="Index" asp-controller="Estimates">Quotes</a></li>
+                     <li><a asp-action="Index" asp-controller="Invoices">Invoices</a></li>
+                     <li><a asp-action="Structure" asp-controller="Organization">Customer Statements</a></li>*@
                     <li><a asp-action="Index" asp-controller="Customers">Customer</a></li>
-                    <li><a asp-action="Index" asp-controller="ProductServices">Products & Services</a></li>
+                    <li><a asp-action="CustomerStatement" asp-controller="Customers">Customer Statements</a></li>
+                    @*<li><a asp-action="Index" asp-controller="ProductServices">Products & Services</a></li>*@
                 </ul>
             </li>
             <li>
@@ -84,7 +105,7 @@
                 </ul>
             </li>
             <li>
-                <a asp-action="Index" asp-controller="Report" class="waves-effect waves-dark" ><i class="ti-bar-chart"></i><span class="hide-menu">Report</span></a>
+                <a asp-action="Index" asp-controller="Report" class="waves-effect waves-dark"><i class="ti-bar-chart"></i><span class="hide-menu">Report</span></a>
 
             </li>
 
